# BOTC-Randomizer

./: README.md  pyproject.toml
src/botc_randomizer/: __init__.py  constraints.py  generator.py  main.py  roles.py  rules.py  sampling.py
src/botc_randomizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
