[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botc-randomizer"
version = "0.1.0"
description = "BOTC Trouble Brewing randomizer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "mdesevricourt"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
botc_randomizer = ["py.typed"]
